fix: overflow to scroll

--- a/client/src/page/ChannelPage/style.css
+++ b/client/src/page/ChannelPage/style.css
@@ -1,14 +1,15 @@
 .channel-page-container {
   position: relative;
   width: 100%;
-  margin-bottom: 100px;
+  height: 90vh;
+  /* margin-bottom: 100px; */
   display: flex;
 }
 
 .channel-left {
   display: inline;
   width: 380px;
-  height: 90vh;
+  height: 100%;
   background-color: #d33535;
   position: relative;
 }
@@ -18,6 +19,8 @@
   justify-content: center;
   display: inline;
   width: auto;
+  height: 100%;
+  overflow-y: scroll;
   right: 0;
   left: 380px;
 }
